@@ -1,2 +1,0 @@
-# no libtool .la files, please
-./usr/lib/libnova.la
