@@ -7,5 +7,10 @@ override_dh_auto_test:
 	dh_auto_test
 	-lntest/lntest
 
+override_dh_auto_install:
+	dh_auto_install
+	# no libtool .la files, please
+	find debian/tmp -name '*.la' -type f -exec rm --verbose {} \;
+
 override_dh_install:
-	dh_install --list-missing -X.la
+	dh_install --list-missing
